# SUEP-course-elect

./: .gitignore  README.md  app.py  build.py  config.json  ids.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
backend/: api.py  client.py  config.py  expression.py  models.py  runner.py  scheduler.py  sync.py
frontend/: index.html
frontend/css/: app.css  style-sample.css  theme.css
frontend/js/: api.js  app.js  countdown.js  style-sample.js  tree.js
