[tool.poetry]
name = "suep-course-elect"
version = "0.1.3"
description = "An automation script for SUEP course selection."
authors = []
license = "GPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.30.0"
pandas = "^2.0.1"
lxml = "^4.9.2"
jsonnet-binary = "^0.17.0"
openpyxl = "^3.1.2"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^12.0"
python-multipart = "^0.0.9"
pywebview = "^5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
nuitka = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
